# zed

./: .gitignore  Cargo.toml
crates/bookmarks/: Cargo.toml
crates/bookmarks/src/: annotation.rs  bookmarks.rs  persistence.rs
crates/project/src/: bookmarks.rs  project.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs
