[package]
name = "bookmarks"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/bookmarks.rs"

[dependencies]
menu.workspace = true
gpui.workspace = true
ui.workspace = true
theme.workspace = true
picker.workspace = true
workspace.workspace = true
util.workspace = true
smol.workspace = true
fuzzy.workspace = true
ordered-float.workspace = true
project.workspace = true
log.workspace = true
editor.workspace = true
text.workspace = true
